Updated mobile featured project section to be a flexbox instead of a 1 column grid, hopefully fixing overflow issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3564,9 +3564,11 @@ input, select, textarea {
 	/* #region Media Queries */
 	@media screen and (max-width: 767px) {
 		.featured-project-section {
-			display: grid;
-			grid-template: 50% 50% / 100%;
-			row-gap: 0.5em;
+			display: flex;
+			flex-direction: column;
+		}
+		.featured-project-images {
+			margin-bottom: 0.5em;
 		}
 		.features article .image {
 			margin-bottom: 0.5em;
